<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top"
        layout="@layout/app_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/top"
        android:visibility="visible" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_msg_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/text_no_data_found"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_filter"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_ranking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_ranking"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_sort"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_14"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>